# DigitalNote-2

./: .gitignore  .gitmodules  DigitalNote.app.pro  DigitalNote.daemon.pro  DigitalNote.pro  DigitalNote.unix.app.pro  DigitalNote.unix.daemon.pro  DigitalNote.unix.pro  DigitalNote.win.app.pro  DigitalNote.win.daemon.pro  DigitalNote_config.pri  DigitalNote_resource.rc  README.md  log.txt
.github/workflows/: build-prebuilt-libs.yml  ci-linux-aarch64.yml  ci-linux-x64.yml  ci-macos.yml  ci-windows.yml  release.yml
doc/: build-osx.md
include/: base.pri  build_path.pri  compiler_settings.pri  definitions.pri  forums.pri  headers.pri  libs.pri  msse2.pri  qt.pri  release.pri  security.pri  sources.pri  translations.pri
include/app/: compiler_settings.pri  headers.pri  other_files.pri  qt_settings.pri  resources.pri  sources.pri  translations.pri
include/daemon/: compiler_settings.pri  headers.pri  qt_settings.pri  sources.pri
include/extra/: TSQM.pri  gmp.pri  leveldb.pri  openssl.pri  secp256k1.pri
include/fix/: boost.pri  msse2.pri  qt.pri  release.pri
include/libs/: bdb.pri  bip39.pri  boost.pri  event.pri  gmp.pri  leveldb-2.11.pri  leveldb.pri  miniupnpc.pri  openssl.pri  qrencode.pri  secp256k1.pri
include/options/: bitcoin_need_qt_plugins.pri  release.pri  use_0.pri  use_build_info.pri  use_dbus.pri  use_pch.pri  use_qrcode.pri  use_unity_build.pri  use_update_alternatives.pri  use_upnp.pri
include/qmakeUnity/: qmake_unity.pri
share/: genbuild.bat
src/: activemasternode.cpp  activemasternode.h  addrman.cpp  addrman.h  alert.cpp  all_headers.h  allocators.cpp  allocators.h  annotatedmixin.h  base58.cpp  base58.h  base_uint.cpp  base_uint.h  bignum.cpp  bignum.h  bitcoind.cpp  blockparams.cpp  blockparams.h  blocksizecalculator.cpp  blocksizecalculator.h  caccount.cpp  caccount.h  caccountingentry.cpp  caccountingentry.h  cactivemasternode.cpp  cactivemasternode.h  caddress.cpp  caddress.h  caddrinfo.cpp  caddrinfo.h  caddrman.cpp  caddrman.h  caffectedkeysvisitor.cpp  caffectedkeysvisitor.h  calert.cpp  calert.h  cautofile.cpp  cautofile.h  cbase58data.cpp  cbase58data.h  (+307 more)
src/allocators/: lockedpagemanager.cpp  lockedpagemanager.h  lockedpagemanagerbase.cpp  lockedpagemanagerbase.h  memorypagelocker.cpp  memorypagelocker.h  secure_allocator.cpp  secure_allocator.h  securestring.h  zero_after_free_allocator.cpp  zero_after_free_allocator.h
src/crypto/bmw/: bmw512.h
src/crypto/echo/: echo512.h
src/enums/: cchainparams_base58type.h  cchainparams_network.h  changetype.h  isminetype.h  opcodetype.h  script_error.h  script_verify.h  serialize_type.h  sighash.h  txnouttype.h
src/json/: json_spirit_reader_template.h
src/lz4/: lz4.c
src/net/: banreason.h  caddrdb.cpp  caddrdb.h  cbandb.cpp  cbandb.h  cbanentry.cpp  cbanentry.h  cnetaddr.cpp  cnetaddr.h  cnetcleanup.h  cnetmessage.cpp  cnetmessage.h  cnode.cpp  cnode.h  cnodestats.h  cservice.cpp  cservice.h  csubnet.cpp  csubnet.h  have_msg_nosignal.h  myclosesocket.h  network.h  proxytype.h  secmsgnode.h
src/qt/: addeditadrenalinenode.cpp  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  blockbrowser.cpp  blockbrowser.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontrolworker.cpp  coincontrolworker.h  decryptworker.cpp  decryptworker.h  flowlayout.cpp  guiutil.cpp  guiutil.h  guiutil_hidpi_additions.cpp  importprivatekeydialog.cpp  masternodemanager.cpp  masternodemanager.h  masternodemanager.ui  masternodeworker.cpp  masternodeworker.h  messagemodel.cpp  messagemodel.h  messagepage.cpp  notificator.h  optionsdialog.cpp  optionsmodel.cpp  (+29 more)
src/qt/forms/: coincontroldialog.ui  masternodemanager.ui  messagepage.ui  optionsdialog.ui  qrcodedialog.ui  rpcconsole.ui  sendcoinsentry.ui  sendmessagesdialog.ui  sendmessagesentry.ui  signverifymessagedialog.ui
src/qt/plugins/mrichtexteditor/: mrichtextedit.cpp
src/qt/test/: walletmodel_tests.cpp
src/secp256k1/: confdefs.h
src/smsg/: address.cpp  address.h  batchscanner.cpp  batchscanner.h  bucket.cpp  bucket.h  cdigitalnoteaddress_b.cpp  cdigitalnoteaddress_b.h  ckeyid_b.cpp  ckeyid_b.h  crypter.cpp  crypter.h  db.cpp  db.h  messagedata.h  options.cpp  options.h  securemessage.cpp  securemessage.h  stored.cpp  stored.h  token.cpp  token.h
src/test/: amount_tests.cpp  base58_tests.cpp  hash_tests.cpp  key_tests.cpp  script_tests.cpp  spork_tests.cpp  transaction_tests.cpp  util_tests.cpp  version_tests.cpp
src/thread/: cmutexlock.cpp  cmutexlock.h  csemaphore.cpp  csemaphore.h  csemaphoregrant.cpp  csemaphoregrant.h  safety.h
src/types/: banmap_t.h  ccriticalblock.h  ccriticalsection.h  ckeyingmaterial.h  cprivkey.h  cryptedkeymap.h  csecret.h  cserializedata.h  ctxdestination.h  data_chunk.h  ec_point.h  isminefilter.h  mapprevtx.h  mapvalue_t.h  nodeid.h  txitems.h  txpair.h  valtype.h  vector_uchar.h
src/uint/: uint160.cpp  uint160.h  uint256.cpp  uint256.h  uint512.cpp  uint512.h  uint_base.cpp  uint_base.h
src/util/: backwards.h
test/: CMakeLists.txt
test/bip39/: test_bip39_wallet.cpp
test/integration/: test_entropy_boundaries.cpp  test_mnemonic_roundtrip.cpp  test_seed_vectors.cpp
test/qt/: test_seedphrasedialog.cpp
unity/app/: unity.pri  unity_0.cpp  unity_1.cpp  unity_10.cpp  unity_11.cpp  unity_12.cpp  unity_13.cpp  unity_14.cpp  unity_15.cpp  unity_16.cpp  unity_17.cpp  unity_18.cpp  unity_19.cpp  unity_2.cpp  unity_3.cpp  unity_4.cpp  unity_5.cpp  unity_6.cpp  unity_7.cpp  unity_8.cpp  unity_9.cpp  unitymoc_0.cpp
unity/daemon/: unity.pri  unity_0.cpp  unity_1.cpp  unity_10.cpp  unity_11.cpp  unity_12.cpp  unity_13.cpp  unity_14.cpp  unity_15.cpp  unity_2.cpp  unity_3.cpp  unity_4.cpp  unity_5.cpp  unity_6.cpp  unity_7.cpp  unity_8.cpp  unity_9.cpp
